[workspace]
resolver = "2"
members = [
    "abc044",
    "abc049",
    "abc058",
    "abc066",
    "abc071",
    "abc081",
    "abc082",
    "abc083",
    "abc086",
    "abc087",
    "abc090",
    "abc092",
    "abc093",
    "abc094",
    "abc100",
    "abc101",
    "abc102",
    "abc109",
    "abc115",
    "abc116",
    "abc121",
    "abc122",
    "abc127",
    "abc132",
    "abc136",
    "abc138",
    "abc139",
    "abc142",
    "abc143",
    "abc150",
    "abc155",
    "abc156",
    "abc157",
    "abc160",
    "abc161",
    "abc170",
    "abc176",
    "abc182",
    "abc188",
    "abc190",
    "abc196",
    "abc200",
    "abc205",
    "abc210",
    "abc220",
    "abc221",
    "abc229",
    "abc234",
    "abc240",
    "abc251",
    "abc261",
    "abc269",
    "abc274",
    "abc280",
    "abc290",
    "abc300",
    "abc309",
    "abc318",
    "abc327",
    "abc339",
    "abc349",
    "abc350",
    "abc362",
    "template",
]
