[workspace]
resolver = "2"
members = [
    "abc012",
    "abc044",
    "abc049",
    "abc055",
    "abc058",
    "abc066",
    "abc071",
    "abc072",
    "abc079",
    "abc081",
    "abc082",
    "abc083",
    "abc086",
    "abc087",
    "abc090",
    "abc092",
    "abc093",
    "abc094",
    "abc100",
    "abc101",
    "abc102",
    "abc106",
    "abc109",
    "abc115",
    "abc116",
    "abc121",
    "abc122",
    "abc127",
    "abc132",
    "abc136",
    "abc138",
    "abc139",
    "abc142",
    "abc143",
    "abc150",
    "abc154",
    "abc155",
    "abc156",
    "abc157",
    "abc160",
    "abc161",
    "abc164",
    "abc168",
    "abc170",
    "abc176",
    "abc182",
    "abc188",
    "abc190",
    "abc192",
    "abc196",
    "abc200",
    "abc205",
    "abc210",
    "abc216",
    "abc217",
    "abc220",
    "abc221",
    "abc229",
    "abc234",
    "abc236",
    "abc240",
    "abc244",
    "abc247",
    "abc251",
    "abc260",
    "abc261",
    "abc265",
    "abc269",
    "abc274",
    "abc280",
    "abc281",
    "abc282",
    "abc283",
    "abc290",
    "abc295",
    "abc297",
    "abc300",
    "abc305",
    "abc309",
    "abc318",
    "abc322",
    "abc327",
    "abc332",
    "abc339",
    "abc344",
    "abc349",
    "abc350",
    "abc352",
    "abc360",
    "abc362",
    "template",
]
